# lily58-wireless-view-zmk-config

./: build.yaml
config/: CMakeLists.txt  lily58.conf  lily58.keymap  lily58_oled.c  lily58_oled.h  lily58_updated.conf  west.yml
